Add tachyons stylesheet

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Important links to libraries -->
+
+  <link rel="stylesheet" href="/tachyons.css">
+
   <!-- Bootstrap CSS library -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css"> <!-- This is the style sheet that you can edit in this folder -->
@@ -35,8 +38,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        
-        <a class="navbar-brand" href="index.html">VM 
+
+        <a class="navbar-brand" href="index.html">VM
           <!-- If you would like a logo instead of text, you can insert it here -->
           <!-- <img class="img-responsive" src="..." alt="..." /> -->
         </a>
