--- a/portfolio.html
+++ b/portfolio.html
@@ -1,112 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html class="debug">
 
 <head>
 
-  <title>My Portfolio</title> <!-- This text is the text you see on your browser tab -->
-
+  <title>My Portfolio</title>
   <meta name="description" content="This template was created by Varun Mathew for the PPCE Elective 'Developing Technical Design Skills For Your Digital Portfolio', 2017">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Important links to libraries -->
-  <!-- Bootstrap CSS library -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles.css"> <!-- This is the style sheet that you can edit in this folder -->
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- JavaScript library -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/tachyons.css">
 
 </head>
 
 <body>
 
-  <!-- // Static Navbar // -->
+  <nav class="dt w-100 border-box pa3 ph4-ns">
+    <a class="dtc v-mid mid-gray link dim w-25 w-40-ns" href="index.html" title="Home">
+      <!-- <img src="logo.jpg" class="dib w2 h2 br-100" alt="Varun Mathew"> -->
+      <p class="f4 fw9 sans-serif tl">
+        &#x221a;<span class="dib-l dib-m dn">arun</span><span class="dib">.</span>mat<span class="dib-l dib-m dn">hew</span>
+      </p>
 
-  <!-- Change 'static' to 'fixed' if you want the navbar to be anchored at the top of your screen -->
-  <div class="navbar navbar-default navbar-static-top">
-    <div class="container">
-      <div class="navbar-header">
-
-        <!-- Menu button for smaller screen size -->
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        
-        <a class="navbar-brand" href="index.html">VM 
-          <!-- If you would like a logo instead of text, you can insert it here -->
-          <!-- <img class="img-responsive" src="..." alt="..." /> -->
-        </a>
-      </div>
-
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="portfolio.html">Projects</a></li>
-          <li><a href="index.html#about">About</a></li>
-          <li><a href="#">Contact</a></li> <!-- # indicates a link to another file -->
-        </ul>
-      </div>
-
+    </a>
+    <div class="dtc v-mid w-75 w-60-ns tr">
+      <a class="link dim dark-gray f5 f4-l sans-serif dib mr3 mr4-ns" href="portfolio.html" title="Projects">Projects</a>
+      <a class="link dim dark-gray f5 f4-l sans-serif dib mr3 mr4-ns" href="index.html#about" title="About">About</a>
+      <a class="link dim dark-gray f5 f4-l sans-serif dib" href="#" title="Contact">Contact</a>
     </div>
+  </nav>
+
+  <div class="pv4 tc avenir bg-white black-80">
+    <h1 class="pa2 f2 fw7 lh-title">VM's Portfolio</h1>
+    <h2 class="mt2 mb0 f5 f4-ns fw5">The projects I have worked on since 2014</h2>
   </div>
 
-  <!-- // Page Heading // -->
+  <div class="w-90 center cf">
 
-  <div class="intro">
-    <div class="container projectPage">
-
-      <h1>VM's Portfolio</h1>
-      <p>The projects I have worked on since 2014</p>
-
+    <div class="fl w-100 w-third-ns pa2">
+      <a class="db center mw5 link dim" href="project1.html">
+        <img class="db center" src="square.png" alt="Apples" />
+      </a>
+      <p class="sans-serif f6 fw7 tc">APPLES</p>
     </div>
-  </div>
 
-  <!-- // Projects // -->
-
-  <div class="section">
-    <div class="container projects">
-      <div class="row">
-
-        <!-- # indicates a link to another page -->
-        <!-- replace img src with your image file -->
-
-        <!-- Project Grid -->
-
-        <div class="col-xs-12 col-md-4">
-          <a class="" href="project1.html"><img class="img-responsive img-rounded" src="square.png" alt="Apples" /></a>
-          <p>APPLES</p>
-        </div>
-
-        <div class="col-xs-12 col-md-4">
-          <a class="" href="#"><img class="img-responsive img-rounded" src="square.png" alt="Oranges" /></a>
-          <p>ORANGES</p>
-        </div>
-
-        <div class="col-xs-12 col-md-4">
-          <a class="" href="#"><img class="img-responsive img-rounded" src="square.png" alt="Legacy" /></a>
-          <p>LEGACY</p>
-        </div>
-
-        <div class="col-xs-12 col-md-4">
-          <a class="" href="#"><img class="img-responsive img-rounded" src="square.png" alt="Project #4" /></a>
-          <p>Project #4</p>
-        </div>
-
-        <div class="col-xs-12 col-md-4">
-          <a class="" href="#"><img class="img-responsive img-rounded" src="square.png" alt="Project #5" /></a>
-          <p>Project #5</p>
-        </div>
-
-        <div class="col-xs-12 col-md-4">
-          <a class="" href="#"><img class="img-responsive img-rounded" src="square.png" alt="Project #6" /></a>
-          <p>Project #6</p>
-        </div>
-
-      </div>
+    <div class="fl w-100 w-third-ns pa2">
+      <a class="db center mw5 link dim" href="#">
+        <img class="db center" src="square.png" alt="Oranges" />
+      </a>
+      <p class="sans-serif f6 fw7 tc">ORANGES</p>
     </div>
+
+    <div class="fl w-100 w-third-ns pa2">
+      <a class="db center mw5 link dim" href="#">
+        <img class="db center" src="square.png" alt="Legacy" />
+      </a>
+      <p class="sans-serif f6 fw7 tc">LEGACY</p>
+    </div>
+
+    <div class="fl w-100 w-third-ns pa2">
+      <a class="db center mw5 link dim" href="#">
+        <img class="db center" src="square.png" alt="Project #4" />
+      </a>
+      <p class="sans-serif f6 fw7 tc">Project #4</p>
+    </div>
+
+    <div class="fl w-100 w-third-ns pa2">
+      <a class="db center mw5 link dim" href="#">
+        <img class="db center" src="square.png" alt="Project #5" />
+      </a>
+      <p class="sans-serif f6 fw7 tc">Project #5</p>
+    </div>
+
+    <div class="fl w-100 w-third-ns pa2">
+      <a class="db center mw5 link dim" href="#">
+        <img class="db center" src="square.png" alt="Project #6" />
+      </a>
+      <p class="sans-serif f6 fw7 tc">Project #6</p>
+    </div>
+
   </div>
 
 </body>
