--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="debug">
+<html>
 
 <head>
 
@@ -7,24 +7,24 @@
   <meta name="description" content="This template was created by Varun Mathew for the PPCE Elective 'Developing Technical Design Skills For Your Digital Portfolio', 2017">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/tachyons.css">
+  <link rel="stylesheet" href="tachyons.css">
 
 </head>
 
 <body>
 
-  <nav class="dt w-100 border-box pa3 ph4-ns">
-    <a class="dtc v-mid mid-gray link dim w-25 w-40-ns" href="index.html" title="Home">
+  <nav class="dt mw9 w-100 border-box pa3 ph4-ns">
+    <a class="dtc v-mid mid-gray link hover-orange w-25 w-40-ns" href="index.html" title="Home">
       <!-- <img src="logo.jpg" class="dib w2 h2 br-100" alt="Varun Mathew"> -->
-      <p class="f4 fw9 sans-serif tl">
-        &#x221a;<span class="dib-l dib-m dn">arun</span><span class="dib">.</span>mat<span class="dib-l dib-m dn">hew</span>
+      <p class="f4 fw9 sans-serif tl"><!-- &#x221a; -->
+        v<span class="dib-l dib-m dn">arun</span><span class="dib">.</span>mat<span class="dib-l dib-m dn">hew</span>
       </p>
 
     </a>
     <div class="dtc v-mid w-75 w-60-ns tr">
-      <a class="link dim dark-gray f5 f4-l sans-serif dib mr3 mr4-ns" href="portfolio.html" title="Projects">Projects</a>
-      <a class="link dim dark-gray f5 f4-l sans-serif dib mr3 mr4-ns" href="index.html#about" title="About">About</a>
-      <a class="link dim dark-gray f5 f4-l sans-serif dib" href="#" title="Contact">Contact</a>
+      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="portfolio.html" title="Portfolio">Portfolio</a>
+      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib mr3 mr4-ns" href="index.html#about" title="About">About</a>
+      <a class="link dark-gray hover-orange f5 f4-l sans-serif dib" href="index.html#contact" title="Contact">Contact</a>
     </div>
   </nav>
 
@@ -34,19 +34,24 @@
 
     <div class="w-90 center">
 
-      <div class="fl w-90 w-third-m w-third-l pa2 db center">
-        <img class="fn fr-ns mw4 mw4-ns mw5-l db center br-100" src="square.png" alt="Profile Picture" />
+      <div class="fl w-100 w-third-m w-third-l pa2 db center">
+        <img class="fr-ns fn mw4 mw4-ns mw5-l db center br-100" src="profilepic.jpg" alt="Profile Picture" />
       </div>
 
       <div class="fl w-100 w-two-thirds-ns">
 
         <a name="about"></a> <!-- This anchor is so the ABOUT in the navbar can link to this section -->
 
-        <h1 class="pa2 sans-serif f2 fw7 lh-title">VM's Portfolio</h1>
+        <h1 class="f2 lh-title fw7 mt0 pt3 pl2 bt bw2 sans-serif">
+          I'm Varun
+        </h1>
+        <h2 class="f3 mid-gray lh-title pl2 sans-serif">
+          Architectural Designer | Model Maker | Transdisciplinary Innovator
+        </h2>
 
-        <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultricies pretium tortor, a pulvinar dui varius sed. Morbi nec varius ex, sed convallis odio. Pellentesque venenatis felis sed purus ultricies egestas. Sed commodo venenatis mi et cursus. Cras urna tellus, dictum in leo vel, auctor egestas lacus. Quisque condimentum mi nec ultrices laoreet. Mauris blandit blandit nibh ut porttitor. Praesent nisl dolor, laoreet et lacinia quis, congue vitae turpis. Suspendisse hendrerit lacus non sodales dignissim. Aenean metus libero, aliquet eu consequat maximus, vehicula et tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vel faucibus massa. Donec viverra, enim eu luctus lacinia, nunc lorem consequat sem, eu placerat risus metus sit amet nisi. Quisque mollis odio augue, non ornare tortor tincidunt quis.</p>
+        <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">To me, being an architect is not simply about your ability to design buildings. It's about having an acute spatial awareness, being able to visualise in three-dimensions and to choreograph human movement through physical structures and space. It's about understanding who we are designing for, how things will be used, and most importantly, why.</p>
 
-        <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ultricies pretium tortor, a pulvinar dui varius sed. Morbi nec varius ex, sed convallis odio. Pellentesque venenatis felis sed purus ultricies egestas. Sed commodo venenatis mi et cursus. Cras urna tellus, dictum in leo vel, auctor egestas lacus. Quisque condimentum mi nec ultrices laoreet. Mauris blandit blandit nibh ut porttitor. Praesent nisl dolor, laoreet et lacinia quis, congue vitae turpis. Suspendisse hendrerit lacus non sodales dignissim. Aenean metus libero, aliquet eu consequat maximus, vehicula et tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vel faucibus massa. Donec viverra, enim eu luctus lacinia, nunc lorem consequat sem, eu placerat risus metus sit amet nisi. Quisque mollis odio augue, non ornare tortor tincidunt quis.</p>
+        <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">I studied a Bachelor of Design in Architecture and Bachelor of Creative Intelligence and Innovation at the University of Technology, Sydney. I have experience using laser cutters, CNC machines, woodworking machinery, 3D modelling software, and the Adobe Creative Suite.</p>
 
       </div>
 
@@ -54,27 +59,63 @@
 
     <!-- // Projects // -->
 
-    <div class="w-90 center cf">
+    <div class="w-90 center sans-serif">
+
+      <article class="pa3 pa5-ns ml0 ml0-m ml5-l" data-name="slab-stat">
+        <h1 class="f4 ttu tracked lh-title">Skills</h1>
+        <div class="cf">
+          <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
+            <dd class="mid-gray f6 f5-l b ml0 ml2-m ml5-l">Rhinoceros 3D</dd>
+            <dd class="dark-gray f3 f2-l b ml0 ml2-m ml5-l">Advanced</dd>
+          </dl>
+          <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
+            <dd class="mid-gray f6 f5-l b ml0 ml2-m ml5-l">Adobe Illustrator</dd>
+            <dd class="dark-gray f3 f2-l b ml0 ml2-m ml5-l">Advanced</dd>
+          </dl>
+          <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
+            <dd class="mid-gray f6 f5-l b ml0 ml2-m ml5-l">Adobe InDesign</dd>
+            <dd class="dark-gray f3 f2-l b ml0 ml2-m ml5-l">Advanced</dd>
+          </dl>
+          <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
+            <dd class="mid-gray f6 f5-l b ml0 ml2-m ml5-l">Adobe Photoshop</dd>
+            <dd class="dark-gray f3 f2-l b ml0 ml2-m ml5-l">Advanced</dd>
+          </dl>
+          <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
+            <dd class="mid-gray f6 f5-l b ml0 ml2-m ml5-l">Adobe Premiere Pro</dd>
+            <dd class="dark-gray f3 f2-l b ml0 ml2-m ml5-l">Intermediate</dd>
+          </dl>
+          <dl class="fl fn-l w-50 dib-l w-auto-l lh-title">
+            <dd class="mid-gray f6 f5-l b ml0 ml2-m ml5-l">HTML</dd>
+            <dd class="dark-gray f3 f2-l b ml0 ml2-m ml5-l">Intermediate</dd>
+          </dl>
+          <dl class="fl fn-l w-50 dib-l w-auto-l lh-title">
+            <dd class="mid-gray f6 f5-l b ml0 ml2-m ml5-l">CSS</dd>
+            <dd class="dark-gray f3 f2-l b ml0 ml2-m ml5-l">Intermediate</dd>
+          </dl>
+        </div>
+      </article>
+
+<!--       <h1 class="pa2 sans-serif f2 fw7 lh-title">Project Showcase</h1>
 
       <div class="fl w-100 w-third-ns pa2">
         <a class="db center mw5 link dim" href="project1.html">
           <img class="db center" src="square.png" alt="Apples" />
         </a>
-        <p class="sans-serif f6 fw7 tc">APPLES</p>
+        <p class="sans-serif f6 fw7 tc">ARCHITECTURE: ARTS HIGH SCHOOL</p>
       </div>
 
       <div class="fl w-100 w-third-ns pa2">
         <a class="db center mw5 link dim" href="#">
           <img class="db center" src="square.png" alt="Oranges" />
         </a>
-        <p class="sans-serif f6 fw7 tc">ORANGES</p>
+        <p class="sans-serif f6 fw7 tc">CHOICE INDUSTRY PROJECT</p>
       </div>
 
       <div class="fl w-100 w-third-ns pa2">
         <a class="db center mw5 link dim" href="#">
           <img class="db center" src="square.png" alt="Legacy" />
         </a>
-        <p class="sans-serif f6 fw7 tc">LEGACY</p>
+        <p class="sans-serif f6 fw7 tc">FTDI PLATFORM</p>
       </div>
 
       <div class="fl w-100 w-third-ns pa2">
@@ -96,9 +137,22 @@
           <img class="db center" src="square.png" alt="Project #6" />
         </a>
         <p class="sans-serif f6 fw7 tc">Project #6</p>
-      </div>
+      </div> -->
 
     </div>
+
+    <footer class="pv4 ph3 ph5-ns tr bg-dark-gray">
+      <a name="contact"></a>
+      <a class="link silver hover-orange dib h2 w2 mr3" href="https://www.facebook.com/varuncmat" title="Facebook">
+        <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.414"><path d="M15.117 0H.883C.395 0 0 .395 0 .883v14.234c0 .488.395.883.883.883h7.663V9.804H6.46V7.39h2.086V5.607c0-2.066 1.262-3.19 3.106-3.19.883 0 1.642.064 1.863.094v2.16h-1.28c-1 0-1.195.476-1.195 1.176v1.54h2.39l-.31 2.416h-2.08V16h4.077c.488 0 .883-.395.883-.883V.883C16 .395 15.605 0 15.117 0" fill-rule="nonzero"/></svg>
+      </a>
+      <a class="link silver hover-orange dib h2 w2 mr3" href="https://github.com/sqrtmat" title="GitHub">
+        <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.414"><path d="M8 0C3.58 0 0 3.582 0 8c0 3.535 2.292 6.533 5.47 7.59.4.075.547-.172.547-.385 0-.19-.007-.693-.01-1.36-2.226.483-2.695-1.073-2.695-1.073-.364-.924-.89-1.17-.89-1.17-.725-.496.056-.486.056-.486.803.056 1.225.824 1.225.824.714 1.223 1.873.87 2.33.665.072-.517.278-.87.507-1.07-1.777-.2-3.644-.888-3.644-3.953 0-.873.31-1.587.823-2.147-.083-.202-.358-1.015.077-2.117 0 0 .672-.215 2.2.82.638-.178 1.323-.266 2.003-.27.68.004 1.364.092 2.003.27 1.527-1.035 2.198-.82 2.198-.82.437 1.102.163 1.915.08 2.117.513.56.823 1.274.823 2.147 0 3.073-1.87 3.75-3.653 3.947.287.246.543.735.543 1.48 0 1.07-.01 1.933-.01 2.195 0 .215.144.463.55.385C13.71 14.53 16 11.534 16 8c0-4.418-3.582-8-8-8"/></svg>
+      </a>
+      <a class="link silver hover-orange dib h2 w2 mr3" href="https://www.linkedin.com/in/vcmat/" title="LinkedIn">
+        <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.414"><path d="M13.632 13.635h-2.37V9.922c0-.886-.018-2.025-1.234-2.025-1.235 0-1.424.964-1.424 1.96v3.778h-2.37V6H8.51V7.04h.03c.318-.6 1.092-1.233 2.247-1.233 2.4 0 2.845 1.58 2.845 3.637v4.188zM3.558 4.955c-.762 0-1.376-.617-1.376-1.377 0-.758.614-1.375 1.376-1.375.76 0 1.376.617 1.376 1.375 0 .76-.617 1.377-1.376 1.377zm1.188 8.68H2.37V6h2.376v7.635zM14.816 0H1.18C.528 0 0 .516 0 1.153v13.694C0 15.484.528 16 1.18 16h13.635c.652 0 1.185-.516 1.185-1.153V1.153C16 .516 15.467 0 14.815 0z" fill-rule="nonzero"/></svg>
+      </a>
+    </footer>
 
   </div>
 
