--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a name="about"></a> <!-- This anchor is so the ABOUT in the navbar can link to this section -->
 
         <h1 class="f2 lh-title fw7 mt0 pt3 pl2 bt bw2 sans-serif">
-          I'm Varun
+          Hi, I'm Varun!
         </h1>
         <h2 class="f3 mid-gray lh-title pl2 sans-serif">
           Architectural Designer | Model Maker | Transdisciplinary Innovator
