--- a/arteryschool.html
+++ b/arteryschool.html
@@ -91,7 +91,7 @@
     <a name="marker2" href="arteryschool.html#marker2" style="background-image: url(resources/school_foam.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fl">
       <span class="white dtc v-mid w-100 h-100 child bg-black-40 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
-          <h1 class="f4 bg-near-black white mv0 pv2 ph3">Model With a Model</h1>
+          <h1 class="f4 bg-near-black white mv0 pv2 ph3">Model Within a Model</h1>
           <div class="pa3 bt">
             <p class="f6 f5-ns lh-copy measure mv0">
               CNC machined polystyrene site model housed within the model of the fabrication lab. It is an incomplete model to insinuate the fact that the students of the school are fabricating it themselves.
@@ -104,10 +104,10 @@
     <a name="marker3" href="arteryschool.html#marker3" style="background-image: url(resources/school_model.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fn">
       <span class="white dtc v-mid w-100 h-100 child bg-black-40 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
-          <h1 class="f4 bg-near-black white mv0 pv2 ph3">Model With a Model</h1>
+          <h1 class="f4 bg-near-black white mv0 pv2 ph3">Full Model</h1>
           <div class="pa3 bt">
             <p class="f6 f5-ns lh-copy measure mv0">
-              CNC machined polystyrene site model housed within the model of the fabrication lab. It is an incomplete model to insinuate the fact that the students of the school are fabricating it themselves.
+              Cast model base with 3D printed roof and polystyrene site model.
             </p>
           </div>
         </article>
