--- a/finwit.html
+++ b/finwit.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <nav class="dt mw9 w-100 border-box pa3 ph4-ns">
+  <nav class="dt mw9 w-100 border-box pa3 ph4-ns bb bw2 b--green">
     <a class="dtc v-mid mid-gray link hover-orange w-25 w-40-ns" href="index.html" title="Home">
       <!-- <img src="logo.jpg" class="dib w2 h2 br-100" alt="Varun Mathew"> -->
       <p class="f4 fw9 sans-serif tl"><!-- &#x221a; -->
