--- a/arteryschool.html
+++ b/arteryschool.html
@@ -107,7 +107,7 @@
           <h1 class="f4 bg-near-black white mv0 pv2 ph3">Full Model</h1>
           <div class="pa3 bt">
             <p class="f6 f5-ns lh-copy measure mv0">
-              Cast model base with 3D printed roof and polystyrene site model.
+              Cast model base with 3D printed roof and polystyrene site model. This is a part sectional and part diagrammatic model of the Fabrication Lab: one of the main buildings in the school.
             </p>
           </div>
         </article>
